First review changes completed

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 #restaurant-name {
   color: #f18200;
@@ -244,8 +244,8 @@ nav h1 a {
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 140px 30px;
+  width: 45%;
 }
 #reviews-container {
   padding: 30px 40px 80px;
@@ -273,7 +273,7 @@ nav h1 a {
   width: 85%;
 }
 #reviews-list li p {
-  margin: 0 0 10px;
+  margin: 20px 0 10px;
 }
 #restaurant-hours td {
   color: #666;
